i aint no nuthin about observables, so this is probably a shitty way to do it

--- a/src/app/recordcard/recordcard.component.html
+++ b/src/app/recordcard/recordcard.component.html
@@ -61,7 +61,7 @@
     <tr class="info">
       <th>&nbsp;</th>
       <th>Total Points</th>
-      <th>{{ 10 + 2 }}</th>
+      <th>{{ total }}</th>
       <th>&nbsp;</th>
       <th>&nbsp;</th>
     </tr>
